Refactoring de backend